[tool.poetry]
name = "service-test-tools"
version = "1.0.0"
description = ""
authors = ["five"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
httpx = "^0.24.1"
fakeredis = "^2.18.0"
pytest-cov = "^4.1.0"
jsonschema = "^4.19.0"
requests-mock = "^1.11.0"
pytest-json-report = "^1.5.0"

